--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <nav>
+            <h3>Dashboard</h3>
+            <ul>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Message</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+            </ul>
+
+            <ul>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Message</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+            </ul>
+        </nav>
+        <main>
+        </main>
+    </div>
 </body>
 </html>
