Style main content section

--- a/index.html
+++ b/index.html
@@ -7,28 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <nav>
-            <h3>Dashboard</h3>
+    <div class="grid grid-wrapper">
+        <nav class="navbar">
             <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Message</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
+                <li><img src="./assets/dashboard.svg" alt="" class="nav-icons">Dashboard</li>
+                <li><img src="./assets/home.svg" alt="" class="nav-icons">Home</li>
+                <li><img src="./assets/card-account-details-outline.svg" alt="" class="nav-icons">Profile</li>
+                <li><img src="./assets/messages.svg" alt="" class="nav-icons">Message</li>
+                <li><img src="./assets/clock.svg" alt="" class="nav-icons">History</li>
+                <li><img src="./assets/messages.svg" alt="" class="nav-icons">Tasks</li>
+                <li><img src="./assets/groups.svg" alt="" class="nav-icons">Communities</li>
             </ul>
 
             <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Message</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
+                <li><img src="./assets/settings.svg" alt="" class="nav-icons">Settings</li>
+                <li><img src="./assets/help.svg" alt="" class="nav-icons">Support</li>
+                <li><img src="./assets/privacy.svg" alt="" class="nav-icons"> Privacy</li>
             </ul>
         </nav>
-        <main>
+        <main class="main-content">
+            <div class="main-meta">infor</div>
+            <div class="card-wrapper">card wrapper</div>
             
         </main>
     </div>
