Add styling to search section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,35 @@
             </ul>
         </nav>
         <main class="main-content">
-            <div class="main-meta">infor</div>
+            <div>
+                <div class="search">
+                    <div>
+                        <img src="./assets/search.svg" class="search-icons" alt="">
+                        <input type="text" id="search-input">
+                    </div>
+    
+                    <div>
+                        <img src="./assets/notifications.svg" class="search-icons" alt="">
+                        <img src="./assets/avataar.svg" class="search-icons" alt="">
+                        <p>Morgan Oakley</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <div>
+                            <img src="./assets/avataar.svg" class="search-icons" alt="">
+                            <p>Morgan Oakley</p>
+                        </div>
+
+                        <div>
+                            <a href="#">New</a>
+                            <a href="#">Upload</a>
+                            <a href="#">Share</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
             <div class="card-wrapper">card wrapper</div>
             
         </main>
