Style search bar

--- a/index.html
+++ b/index.html
@@ -26,21 +26,25 @@
             </ul>
         </nav>
         <main class="main-content">
-            <div>
-                <div class="search">
-                    <div>
+            <div class="search">
+                <div class="flex space-between" id="search-top-row">
+                    <div class="search-inputs flex space-between" style="border: 1px solid yellow">
                         <img src="./assets/search.svg" class="search-icons" alt="">
                         <input type="text" id="search-input">
                     </div>
     
-                    <div>
-                        <img src="./assets/notifications.svg" class="search-icons" alt="">
-                        <img src="./assets/avataar.svg" class="search-icons" alt="">
+                    <div class="flex search-profile space-around" style="border: 1px solid red">
+                        <div>
+                            <img src="./assets/notifications.svg" class="search-icons" alt="">
+                        </div>
+                        <div>
+                            <img src="./assets/avataar.svg" class="search-icons" id="avatar" alt="">
+                        </div>
                         <p>Morgan Oakley</p>
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="flex space-between">
                         <div>
                             <img src="./assets/avataar.svg" class="search-icons" alt="">
                             <p>Morgan Oakley</p>
